# dioxus-mobile-broken-repo

./: .gitignore  Cargo.toml  mobile.toml
src/: lib.rs
